<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="84dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/StringName"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPersonName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/hintName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textViewName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="86dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:text="@string/StringEmail"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textViewName"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/textViewEmail"
        app:layout_constraintEnd_toEndOf="@+id/editTextPersonName"
        app:layout_constraintStart_toStartOf="@+id/editTextPersonName"
        app:layout_constraintTop_toTopOf="@+id/textViewEmail" />

    <TextView
        android:id="@+id/textViewID"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:text="@string/stringId"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewEmail"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

    <EditText
        android:id="@+id/editTextID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintID"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewID"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailAddress"
        app:layout_constraintTop_toTopOf="@+id/textViewID" />

    <TextView
        android:id="@+id/textViewDept"
        android:layout_width="74dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:text="@string/StringDepartment"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewID"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="@+id/textViewID"
        app:layout_constraintTop_toBottomOf="@+id/textViewID" />

    <TextView
        android:id="@+id/textViewDepartmentValue"
        android:layout_width="166dp"
        android:layout_height="46dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDept"
        app:layout_constraintStart_toStartOf="@+id/editTextID"
        app:layout_constraintTop_toTopOf="@+id/textViewDept" />

    <Button
        android:id="@+id/buttonSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StringSelect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/textViewDepartmentValue"
        app:layout_constraintTop_toTopOf="@+id/textViewDepartmentValue" />

    <Button
        android:id="@+id/buttonSubmitMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/StringSubmit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>